apps/panopticode/daily/be/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: daily-be-service
  namespace: panopticode
spec:
  selector:
    app: daily-be
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
